--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Hope Caldeira Smith</h1>
     <img src="https://i.pinimg.com/564x/0c/8c/f9/0c8cf95179609df437c9684bc19352fb.jpg" alt="a pink icon with a flower">
-    <p>linkedin. <a href="https://github.com/hopecaldeira">GITHUB.</a></p>
+    <p>Linkedin. <a href="https://github.com/hopecaldeira">Github.</a> Email.</p>
     
     <h2>Technologies</h2>
     <table>
@@ -43,8 +43,24 @@
         </tr>
     </table>
     <h3>Projects</h3>
-    <p>project description.</p>
-    <a hrf="google.com">click here for code source.</a>
-    <!--ADD LINK HERE EVENTUALLY-->
+        <p>project description.
+        <a hrf="https://github.com/hopecaldeira/HTML-Practice/blob/master/portfolio.html">click here for code source.</a>
+        </p>
+    <h4>Contact Me</h4>
+    <form action="/process" method="post">
+        <div>
+            <label>Name:</label>
+            <input type="text" name="first_name"> 
+        </div>
+        <div>
+            <label>Email:</label>
+            <input type="text" name="email">
+        </div>
+        <div>
+            <label>Message:</label>
+            <textarea name="comment" cols="20" rows="3"></textarea>
+        </div>
+        <input type="submit" value="Send Message">
+    </form>
 </body>
 </html>
