fixed spelling error

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
     </table>
     <h3>Projects</h3>
         <p>project description.
-        <a hrf="https://github.com/hopecaldeira/HTML-Practice/blob/master/portfolio.html">click here for code source.</a>
+        <a href="https://github.com/hopecaldeira/HTML-Practice/blob/master/portfolio.html">click here for code source.</a>
         </p>
     <h4>Contact Me</h4>
     <form action="/process" method="post">
