--- a/registration_form.html
+++ b/registration_form.html
@@ -8,31 +8,45 @@
 </head>
 <body>
     <h1>Registration Form</h1>
-    <p>First name: * <input type="text" name="first_name"></p>
-    <p>Last name: * <input type="text" name="last_name"></p>
-    <p>Email Address: * <input type="email" name="email"></p>
-    <p>Password: * <input type="password" name="password"></p>
-    <p>Birthday: * <input type="date" name="dob"></p>
-    <p>Gender Identity:</p>
-    <input type="radio" name="male" value="normal" id="male">
-    <label for="male">Male</label>
-    <input type="radio" name="female" value="normal" id="female">
-    <label for="female">Fale</label>
-    <input type="radio" name="nonbinary" value="normal" id="nonbinary">
-    <label for="nonbinary">Non-binary</label>
-    <input type="radio" name="pnta" value="normal" id="pnta">
-    <label for="pnta">I prefer not to answer</label>
-    <p>A short description about myself:</p>
-    <textarea name="aboutme" cols="30" rows="6"></textarea>
-    <p>Favorite Language:
-    <select name="language">
-        <option>Spanish</option>
-        <option>Japanese</option>
-        <option>Sign Language</option>
-    </select></p>
-     <p><input type="checkbox" name="accept" id="accept">
+    <form action="/process" method="post">
+        <label>First name: * </label><input type="text" name="first_name">
+        <div>
+            <label>Last name: * </label><input type="text" name="last_name">
+        </div>
+        <div>
+            <label>Email Address: * </label><input type="email" name="email">
+        </div>
+        <div>
+            <label>Password: * </label><input type="password" name="password">
+        </div>
+        <div>
+            <label>Birthday: * </label><input type="date" name="dob">
+        </div>
+    </form>
+    <form action="/process" method="post">
+        <label>Gender Identity:</label>
+            <input type="radio" name="male" value="normal" id="male">
+            <label for="male">Male</label>
+            <input type="radio" name="female" value="normal" id="female">
+            <label for="female">Fale</label>
+            <input type="radio" name="nonbinary" value="normal" id="nonbinary">
+            <label for="nonbinary">Non-binary</label>
+            <input type="radio" name="pnta" value="normal" id="pnta">
+            <label for="pnta">I prefer not to answer</label>
+    </form>
+    <label>A short description about myself:</label>
+        <div>
+        <textarea name="aboutme" cols="30" rows="6"></textarea>
+        </div>
+    <label>Favorite Language:</label>
+        <select name="language">
+            <option>Spanish</option>
+            <option>Japanese</option>
+            <option>Sign Language</option>
+        </select>
+    <form action="/process" method="post">
+        <input type="checkbox" name="accept" id="accept">
         <label for="accept">Yes, I would like to receive periodic email updates</label>
-        </p>
         <input type="submit" value="Create Account">
         <p>* Indicates a required field.</p>
 </body>
