fixed missing tags

--- a/registration_form.html
+++ b/registration_form.html
@@ -49,5 +49,6 @@
         <label for="accept">Yes, I would like to receive periodic email updates</label>
         <input type="submit" value="Create Account">
         <p>* Indicates a required field.</p>
+    </form>
 </body>
 </html>
