--- a/registration_form.html
+++ b/registration_form.html
@@ -45,8 +45,10 @@
             <option>Sign Language</option>
         </select>
     <form action="/process" method="post">
-        <input type="checkbox" name="accept" id="accept">
-        <label for="accept">Yes, I would like to receive periodic email updates</label>
+        <div>
+            <input type="checkbox" name="accept" id="accept">
+            <label for="accept">Yes, I would like to receive periodic email updates</label>
+        </div>
         <input type="submit" value="Create Account">
         <p>* Indicates a required field.</p>
     </form>
